--- a/voice_chatbot.html
+++ b/voice_chatbot.html
@@ -398,7 +398,10 @@
         // CONFIGURATION
         // ========================================================================
 
-        const API_URL = 'http://localhost:5000/api';
+        const metaApiBase = document.querySelector('meta[name="api-base"]')?.content;
+        const DEFAULT_API_BASE = metaApiBase || window.location.origin;
+        const API_BASE = (window.API_BASE_URL || DEFAULT_API_BASE).replace(/\/$/, '');
+        const API_URL = `${API_BASE}/api`;
         const SPEECH_LANG = 'en-US';
 
         // ========================================================================
